Switch to attributes in some places
